fix custom buttons align for Live mode

--- a/src/css/videojs-ios-skin.less
+++ b/src/css/videojs-ios-skin.less
@@ -21,7 +21,6 @@ color: @ios-primary-color;
 }
 .vjs-duration,
 .vjs-time-divider,
-.vjs-custom-control-spacer,
 .vjs-chapters-button,
 .vjs-descriptions-button,
 .vjs-subtitles-button,
@@ -45,6 +44,9 @@ color: @ios-primary-color;
 }
 .vjs-control-bar {
     padding: 0 8px;
+}
+.vjs-custom-control-spacer {
+    margin-right: auto;
 }
 .vjs-ios-control-box {
     display: none;
